fix: resolve overflow x issue

--- a/src/index.css
+++ b/src/index.css
@@ -138,15 +138,14 @@
 #root {
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
   background-color: var(--brand-grey);
+  @apply size-full;
 }
 
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
   height: 100dvh;
 }
 
